--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,17 +26,17 @@ jobs:
         with:
           path: ./basix
           repository: FEniCS/basix
-          ref: mscroggs/apply-dof-transformations
+          ref: main
 
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev ninja-build pkg-config libeigen3-dev
+          sudo apt-get install -y graphviz libgraphviz-dev ninja-build pkg-config
 
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install graphviz ninja pkg-config eigen
+        run: brew install graphviz ninja pkg-config
 
       - name: Install dependencies (Python)
         run: |
