--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -101,21 +101,34 @@ jobs:
           path: doc/build/html/
           retention-days: 2
           if-no-files-found: error
+
       - name: Checkout FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         uses: actions/checkout@v2
         with:
           repository: "FEniCS/docs"
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
-      - name: Push documentation to repository FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/ffcx' && github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+      - name: Set version name
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        run: |
+          echo "VERSION_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Copy documentation into repository
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
+        run: |
+          cd docs
+          git rm -r --ignore-unmatch ffcx/${{ env.VERSION_NAME }}/cpp
+          git rm -r --ignore-unmatch ffcx/${{ env.VERSION_NAME }}/python
+          mkdir -p ffcx/${{ env.VERSION_NAME }}/cpp
+          mkdir -p ffcx/${{ env.VERSION_NAME }}/python
+          cp -r ../cpp/doc/html/* ffcx/${{ env.VERSION_NAME }}/cpp
+          cp -r ../python/doc/build/html/* ffcx/${{ env.VERSION_NAME }}/python
+      - name: Commit and push documentation to FEniCS/docs
+        if: ${{ github.repository == 'FEniCS/ffcx' && ( github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') ) && runner.os == 'Linux' }}
         run: |
           cd docs
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
-          git rm -r ffcx/main/*
-          mkdir -p ffcx/main
-          cp -r ../doc/build/html/* ffcx/main
           git add --all
-          git commit --allow-empty -m "Python FEniCS/ffcx@${{ github.sha }}"
+          git commit --allow-empty -m "C++ FEniCS/ffcx@${{ github.sha }}"
           git push
